--- a/lh-admin/style/style.css
+++ b/lh-admin/style/style.css
@@ -63,7 +63,7 @@ body#login .form-signin h2.form-signin-heading{
 	margin: 0;
 	padding: 20px 15px;
 	text-align: center;
-	background: #41cac0;
+	background: #286090;
 	color: #fff;
 	font-size: 20px;
 	font-weight: 600;
