--- a/lh-admin/style/style.css
+++ b/lh-admin/style/style.css
@@ -88,3 +88,18 @@ body#login .form-signin .btn-login{
 	width: 100%;
 	margin-bottom:10px;
 }
+/*edit*/
+.edit{
+	max-width: 800px;
+}
+/*.edit .spinner .input-group .max-width{
+	max-width: 60px;
+}*/
+/*删除type="number"上下按钮*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+}
+input[type="number"]{
+	-moz-appearance: textfield;
+}
