--- a/lh-admin/style/style.css
+++ b/lh-admin/style/style.css
@@ -121,3 +121,5 @@ input::-webkit-inner-spin-button {
 input[type="number"]{
 	-moz-appearance: textfield;
 }
+/*p-list*/
+.p-list .p-contect{width:50%}
