--- a/lh-admin/style/style.css
+++ b/lh-admin/style/style.css
@@ -7,9 +7,8 @@ body{
 	background-color:#f8f8f8;
     color:#555;
 }
-.lingheight3em{
-	line-height:3em;
-}
+.lingheight3em{line-height:3em;}
+.text-2em{text-indent:2em}
 /*setup*/
 body#setup .setupBox{
 	width:40vw;
@@ -101,6 +100,11 @@ body#login .form-signin .btn-login{
 .p-list .selectbox{
 	display: inline-block;
 	max-width: 90px;
+}
+.p-list td{
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .edit #collapseOne{
 	margin-top:1em;
