--- a/lh-admin/style/style.css
+++ b/lh-admin/style/style.css
@@ -11,7 +11,7 @@ body{
 .text-2em{text-indent:2em}
 /*setup*/
 body#setup .setupBox{
-	width:40vw;
+	max-width:660px;
 	margin:40px auto;
 	padding:20px 60px;
 	border-radius:8px;
